correct video type and ensure overflow-x is hidden

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -10,6 +10,7 @@
 	flex-direction: column;
     align-items: center;
     max-width: $max-width;
+    overflow-x: hidden;
     
     * {
 		color: $neon-yellow;
